--- a/_css/styleLoginNexus.css
+++ b/_css/styleLoginNexus.css
@@ -16,9 +16,9 @@ body{
 
 .container{
     display: flex;
-    width: 75%;
+    width: 60%;
     margin-top: 5%;
-    padding: 5px;
+    padding: 20px;
     border-radius: 10px 0px 0px 10px;
     background-color: #F2F2F2;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
@@ -26,11 +26,21 @@ body{
 
 .card-login{
     display: block;
-    width: 100%;
+    width: 100vh;
     padding: 0;
     margin-left: 20px;
-    border: solid black 1px;
+}
 
+.input-group{
+    padding-top: 25px;
+    padding-bottom: 10px;
+}
+
+.form{
+    display: flex;
+    padding-top: 25px;
+    text-align: center;
+    justify-content: space-around;
 }
 
 #avatar{
